--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -7,8 +7,8 @@ admin.password.md5=
 #解析规则文件URI（支持URL和本地相对路径）
 #相对路径以main/resources为根目录；war包以WEB-INF/classes为根目录
 #修改规则后 访问重载规则API可热刷新配置
-#rule.json.uri=rule.json
-rule.json.uri=https://raw.githubusercontent.com/dengyuhan/magnetW/master/src/main/resources/rule.json
+rule.json.uri=rule.json
+#rule.json.uri=https://raw.githubusercontent.com/dengyuhan/magnetW/master/src/main/resources/rule.json
 
 #请求源站的超时时间(毫秒)
 request.source.timeout=15000
@@ -36,8 +36,10 @@ search.report.enabled=false
 feedback.failure.enabled=false
 
 #是否忽略需要代理才能访问的源站 开启后会隐藏需要代理的源站
-proxy.ignore=true
+proxy.ignore=false
 #HTTP代理服务器配置 开启后访问需要代理的源站时，会使用代理去请求
-proxy.enabled=false
+proxy.enabled=true
+#代理类型 DIRECT(直接连接)，HTTP，SOCKS(socks4或者socks5)
+proxy.type=SOCKS
 proxy.host=127.0.0.1
-proxy.port=1087
+proxy.port=10808
